src/objects/VDC_CREDITNOTE__c.object
<CustomObject>
    <fields>
        <fullName>Credit_Debit_Indicator__c</fullName>
        <label>Credit/Debit Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Note_Number__c</fullName>
        <label>Credit Note Number</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_of_Execution__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date of Execution</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Id__c</fullName>
        <label>Job Id</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Code_Category__c</fullName>
        <label>Reason Code Category</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Number__c</fullName>
        <label>Vendor Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>VDC_CREDITNOTE</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VDC_CREDITNOTES</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>